[TASK] ext_emconf, composer.json, README.md, .gitignore

--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,15 @@
 {
-	"name": "typo3/cms-func",
-	"type": "typo3-cms-framework",
-	"description": "TYPO3 Core",
+	"name": "friendsoftypo3/cms-func",
+	"type": "typo3-cms-extension",
+	"description": "Brings the backend Web->functions main module for extensions to hook in",
 	"homepage": "https://typo3.org",
 	"license": ["GPL-2.0+"],
 
 	"require": {
-		"typo3/cms-core": "*"
+		"typo3/cms-core": "^9.0"
 	},
 	"replace": {
 		"func": "*"
-	},
-	"extra": {
-		"typo3/cms": {
-			"Package": {
-				"partOfFactoryDefault": true
-			}
-		}
 	},
 	"autoload": {
 		"psr-4": {
