Add replace for old composer names
This package is released to TER, therefore needs a proper replacement
for this (identical package)

Also add a replace for the old core package name.

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
 		"typo3/cms-core": "^9.0"
 	},
 	"replace": {
-		"func": "*"
+		"func": "*",
+		"typo3-ter/func": "*",
+		"typo3/cms-func": "*"
 	},
 	"autoload": {
 		"psr-4": {
