[TASK] Rename to friendsoftypo3/cms-func
Fix wrong change from bea537f7c0a09861b5dc3780d553860c1bdc80ee.

Closes #2

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "friendsoftypo3/func",
+	"name": "friendsoftypo3/cms-func",
 	"type": "typo3-cms-extension",
 	"description": "Brings the backend Web->functions main module for extensions to hook in",
 	"homepage": "https://typo3.org",
