--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
 		"typo3/cms-core": "^9.0"
 	},
 	"replace": {
+		"friendsoftypo3/func": "*",
 		"typo3-ter/func": "*",
 		"typo3/cms-func": "*"
 	},
